# ogen/oas_client_gen.go
@@ -12,7 +12,7 @@ import (
 	"go.opentelemetry.io/otel/attribute"
 	"go.opentelemetry.io/otel/codes"
 	"go.opentelemetry.io/otel/metric"
-	semconv "go.opentelemetry.io/otel/semconv/v1.19.0"
+	semconv "go.opentelemetry.io/otel/semconv/v1.26.0"
 	"go.opentelemetry.io/otel/trace"
 
 	ht "github.com/ogen-go/ogen/http"
@@ -34,6 +34,12 @@ type Invoker interface {
 	//
 	// GET /init
 	InitGet(ctx context.Context) (InitGetRes, error)
+	// RebaseDatabaseGet invokes GET /rebase-database operation.
+	//
+	// Refresh position informations to clear data apparently.
+	//
+	// GET /rebase-database
+	RebaseDatabaseGet(ctx context.Context) (RebaseDatabaseGetRes, error)
 	// ViewGet invokes GET /view operation.
 	//
 	// Viewer Page for human AI drawings.
@@ -108,7 +114,7 @@ func (c *Client) GeneratePost(ctx context.Context, request *GeneratePostReq) (Ge
 
 func (c *Client) sendGeneratePost(ctx context.Context, request *GeneratePostReq) (res GeneratePostRes, err error) {
 	otelAttrs := []attribute.KeyValue{
-		semconv.HTTPMethodKey.String("POST"),
+		semconv.HTTPRequestMethodKey.String("POST"),
 		semconv.HTTPRouteKey.String("/generate"),
 	}
 
@@ -215,7 +221,7 @@ func (c *Client) InitGet(ctx context.Context) (InitGetRes, error) {
 
 func (c *Client) sendInitGet(ctx context.Context) (res InitGetRes, err error) {
 	otelAttrs := []attribute.KeyValue{
-		semconv.HTTPMethodKey.String("GET"),
+		semconv.HTTPRequestMethodKey.String("GET"),
 		semconv.HTTPRouteKey.String("/init"),
 	}
 
@@ -307,6 +313,110 @@ func (c *Client) sendInitGet(ctx context.Context) (res InitGetRes, err error) {
 	return result, nil
 }
 
+// RebaseDatabaseGet invokes GET /rebase-database operation.
+//
+// Refresh position informations to clear data apparently.
+//
+// GET /rebase-database
+func (c *Client) RebaseDatabaseGet(ctx context.Context) (RebaseDatabaseGetRes, error) {
+	res, err := c.sendRebaseDatabaseGet(ctx)
+	return res, err
+}
+
+func (c *Client) sendRebaseDatabaseGet(ctx context.Context) (res RebaseDatabaseGetRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		semconv.HTTPRequestMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/rebase-database"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, "RebaseDatabaseGet",
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/rebase-database"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	{
+		type bitset = [1]uint8
+		var satisfied bitset
+		{
+			stage = "Security:ApiKeyAuth"
+			switch err := c.securityApiKeyAuth(ctx, "RebaseDatabaseGet", r); {
+			case err == nil: // if NO error
+				satisfied[0] |= 1 << 0
+			case errors.Is(err, ogenerrors.ErrSkipClientSecurity):
+				// Skip this security.
+			default:
+				return res, errors.Wrap(err, "security \"ApiKeyAuth\"")
+			}
+		}
+
+		if ok := func() bool {
+		nextRequirement:
+			for _, requirement := range []bitset{
+				{0b00000001},
+			} {
+				for i, mask := range requirement {
+					if satisfied[i]&mask != mask {
+						continue nextRequirement
+					}
+				}
+				return true
+			}
+			return false
+		}(); !ok {
+			return res, ogenerrors.ErrSecurityRequirementIsNotSatisfied
+		}
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeRebaseDatabaseGetResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
 // ViewGet invokes GET /view operation.
 //
 // Viewer Page for human AI drawings.
@@ -319,7 +429,7 @@ func (c *Client) ViewGet(ctx context.Context) (ViewGetRes, error) {
 
 func (c *Client) sendViewGet(ctx context.Context) (res ViewGetRes, err error) {
 	otelAttrs := []attribute.KeyValue{
-		semconv.HTTPMethodKey.String("GET"),
+		semconv.HTTPRequestMethodKey.String("GET"),
 		semconv.HTTPRouteKey.String("/view"),
 	}
 
